# pitch_predictions

./: .gitignore  README.md  clean_pitch.ipynb  download_data.ipynb  main.py  model_fit.ipynb  pyproject.toml  split_data.ipynb
